--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(calculateRoute)
 export(installbrouterR)
 export(listBasedRouteCalculator)
 export(parallelRoutesCalculator)
+export(plotRoute)
 export(setServers)
 export(splitForCores)
 export(startServers)
 import(plotKML)
+import(sf)
 import(sp)
