--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(plotRoute)
 export(setServers)
 export(splitForCores)
 export(startServers)
+import(leaflet)
 import(plotKML)
 import(sf)
 import(sp)
