--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(setServers)
 export(splitForCores)
 export(startServers)
 import(leaflet)
+import(parallel)
 import(plotKML)
 import(sf)
 import(sp)
