--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(plotRoute)
 export(setServers)
 export(splitForCores)
 export(startServers)
+import(RCurl)
 import(leaflet)
 import(parallel)
 import(plotKML)
