--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,11 @@
 export(calculateRoute)
 export(installbrouterR)
 export(listBasedRouteCalculator)
-export(parallelRoutesCalculator)
+export(multipleBRoutes)
 export(plotRoute)
 export(setServers)
 export(splitForCores)
 export(startServers)
-import(RCurl)
 import(leaflet)
 import(parallel)
 import(plotKML)
